Major changes everywhere, some refactoring of if statements, mostly a patch to InventoryClickAction and its listener to make more sense.